[package]
name = "finality-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babylon-apis = { git = "https://github.com/babylonlabs-io/babylon-contract", tag = "v0.11.0-rc.1"}
babylon-merkle = { git = "https://github.com/babylonlabs-io/babylon-contract", tag = "v0.11.0-rc.1"}
bincode = "1.3.3"
celestia-rpc = "0.8.0"
celestia-types = "0.9.0"
# babylon-bindings = { path = "../../packages/bindings" }
# babylon-bitcoin  = { path = "../../packages/bitcoin" }
# babylon-proto    = { path = "../../packages/proto" }
cosmrs = { version = "0.21.0", features = ["cosmwasm"] }
cosmwasm-schema = "2.2.0"
cosmwasm-std = "2.2.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
