[package]
name = "finality-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
babylon-apis = { git = "https://github.com/babylonlabs-io/babylon-contract", tag = "v0.11.0-rc.1"}
babylon-merkle = { git = "https://github.com/babylonlabs-io/babylon-contract", tag = "v0.11.0-rc.1"}
celestia-rpc = "0.8.0"
celestia-types = "0.9.0"
# babylon-bindings = { path = "../../packages/bindings" }
# babylon-bitcoin  = { path = "../../packages/bitcoin" }
# babylon-proto    = { path = "../../packages/proto" }
cosmrs = { version = "0.21.0", features = ["cosmwasm", "rpc", "grpc", "dev"] }
cosmwasm-schema = "2.2.0"
cosmwasm-std = "2.2.0"
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa", "sha256"] }
once_cell = "1.20.2"
rand_core = { version = "0.6.0", features = ["getrandom"], default-features = false }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls-roots"] }
bytes = "1.9.0"
kvdb = "0.13.0" # Parity's abstract key-value database
bincode = "1.3.3"

[dev-dependencies]
kvdb-memorydb = "0.13.0" # Parity's in-memory key-value database